--- a/src/pages/Parametrizacao/styles.scss
+++ b/src/pages/Parametrizacao/styles.scss
@@ -1,5 +1,4 @@
 input[type="date"] {
-  max-width: 166px;
 }
 
 .param-input-group {
